Bug 1153205 - ContentParent should annotate crash reports prior to calling GeneratePairedMinidump. r=ted